--- a/templates/assessmentgenerator/dashboard.html
+++ b/templates/assessmentgenerator/dashboard.html
@@ -1,5 +1,15 @@
 {% extends 'base.html' %}
 
+{% block title_block %}{{ user.username }}'s Dashboard{% endblock %}
+
 {% block body_block %}
-    <h1>TEST</h1>
+    <div class="row">
+        <div class="col-md-3 user-info">
+            User Information:<br>
+            Username: {{ user.username }}<br>
+        </div>
+        <div class="col-md-9 latest-news">
+            This is where the latest news block/the tests/the questions block will reside upon completion.
+        </div>
+
 {% endblock %}
